[tool.poetry]
name = "deep-server"
version = "0.1.0"
description = ""
authors = ["deep-dev <dev@thedeep.io>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "==4.9.3"
boto3 = "==1.17.98"
celery = {version = "==5.1.1", extras = ["redis"]}
# coreapi = "==2.3.3"
# dateparser = "==0.7.0"
# decorator = "==4.3.2"
# descartes = "==1.1.0"
djangorestframework-camel-case = "==1.2.0"
djangorestframework = "==3.12.4"
django-celery-beat = "==2.2.0"
django-cors-headers = "==3.7.0"
django-crispy-forms = "==1.12.0"
django-enumfield = "==2.0.2"
django-filter = "==2.4.0"
django-jsoneditor = "==0.1.6"
django-ordered-model = "==3.4.3"
django-otp = {version = "==1.0.6", extras = ["qrcode"]}
django-premailer = "==0.2.0"
django-redis = "==5.0.0"
django-reversion = "==3.0.9"
django-mptt = "==0.12.0"
django-ses = "==2.0.0"
django-storages = "==1.11.1"
django-utils-six = "2.0"  # Require by autofixture
drf-dynamic-fields = "==0.3.1"
drf-yasg = {version = "==1.20.0", extras = ["validation"]}
feedparser = "==6.0.8"
flower = { git = "https://github.com/mher/flower.git", branch = "7ee34cb5fc039bbeb208a54f113713edbb4809ce" }
geopandas = "==0.9.0"
google-api-python-client = "==2.9.0"
graphene-django = ">=2,<3"
graphene-graphiql-explorer = "*"
graphene-django-extras = { git = "https://github.com/the-deep/graphene-django-extras.git", branch = "v0.4.9-patch.1" }
kombu = "==5.1.0"
lxml = "==4.6.3"
matplotlib = "==3.4.2"
mdmail = "==0.1.3"
oauth2client = "==4.1.3"
openpyxl = "==3.0.7"
pandas = "==1.2.5"
parameterized = "==0.8.1"
"pdfminer.six" = "==20181108"
plotly = "==5.0.0"
# psutil = "==5.6.6"
psycopg2-binary = "==2.9.1"
pyexcel-ods = "==0.6.0"
python-dateutil = "==2.8.1"
python-docx = "==0.8.11"
pyxform = "==1.5.1"
readability-lxml = "==0.8.1"
requests = "==2.25.1"
rest-framework-generic-relations = "==2.0.0"
selenium = "==3.141.0"
sentry-sdk = "1.1.0"
tldextract = "==3.1.0"
user-agents = "==2.2.0"
wordcloud = "==1.8.1"
Markdown = "==3.3.4"
Pillow = "==8.2.0"
PyJWT = "==2.1.0"
Pygments = "==2.9.0"
Shapely = "==1.7.1"
Django = ">=3.2,<3.3"
ipython = "*"
factory-boy = "*"
colorlog = "*"


[tool.poetry.dev-dependencies]
pytest-django = "==4.4.0"
django-debug-toolbar = "*"
django-autofixture = {branch = "0472a494485dd597d598e20d9e1c6c47cf0eadb7", git = "https://github.com/volrath/django-autofixture.git"}
django-fixture-magic = {branch = "466fa35c075009e4a1974f6e588471dd9e720e53", git = "https://github.com/davedash/django-fixture-magic.git"}
# mypy = "*"
# django-stubs = '*'
# flake8 = '*'
# pylint = '*'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
